// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotesBlock customConfigProps 1`] = `
<DocumentFragment>
  <div
    class="css-1xkyebe"
  >
    <div
      class="css-jxxswp"
      id="custom-title-here"
    >
      <div
        class="css-xhp9da"
      >
        <a
          class="css-1ptrway-LinkHeading"
          data-id="custom-title-here"
          data-level="4"
          data-title="Custom title here"
          href="http://localhost/#custom-title-here"
        >
          <svg
            aria-hidden="true"
            class="octicon"
            fill="currentColor"
            height="16"
            role="img"
            style="display: inline-block; user-select: none; vertical-align: middle;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M7.775 3.275a.75.75 0 001.06 1.06l1.25-1.25a2 2 0 112.83 2.83l-2.5 2.5a2 2 0 01-2.83 0 .75.75 0 00-1.06 1.06 3.5 3.5 0 004.95 0l2.5-2.5a3.5 3.5 0 00-4.95-4.95l-1.25 1.25zm-4.69 9.64a2 2 0 010-2.83l2.5-2.5a2 2 0 012.83 0 .75.75 0 001.06-1.06 3.5 3.5 0 00-4.95 0l-2.5 2.5a3.5 3.5 0 004.95 4.95l1.25-1.25a.75.75 0 00-1.06-1.06l-1.25 1.25a2 2 0 01-2.83 0z"
              fill-rule="evenodd"
            />
          </svg>
        </a>
        <h4
          class="css-vsfm4-BlockContainer"
        >
          Custom title here
        </h4>
      </div>
    </div>
    <div>
      <div
        class="css-jxxswp"
        id="component-design-notes"
      >
        <div
          class="css-xhp9da"
        >
          <a
            class="css-1aob0xw-LinkHeading"
            data-id="component-design-notes"
            data-level="2"
            data-title="Component ,design notes"
            href="http://localhost/#component-design-notes"
          >
            <svg
              aria-hidden="true"
              class="octicon"
              fill="currentColor"
              height="26"
              role="img"
              style="display: inline-block; user-select: none; vertical-align: middle;"
              viewBox="0 0 24 24"
              width="26"
            >
              <path
                d="M14.78 3.653a3.936 3.936 0 115.567 5.567l-3.627 3.627a3.936 3.936 0 01-5.88-.353.75.75 0 00-1.18.928 5.436 5.436 0 008.12.486l3.628-3.628a5.436 5.436 0 10-7.688-7.688l-3 3a.75.75 0 001.06 1.061l3-3z"
              />
              <path
                d="M7.28 11.153a3.936 3.936 0 015.88.353.75.75 0 001.18-.928 5.436 5.436 0 00-8.12-.486L2.592 13.72a5.436 5.436 0 107.688 7.688l3-3a.75.75 0 10-1.06-1.06l-3 3a3.936 3.936 0 01-5.567-5.568l3.627-3.627z"
              />
            </svg>
          </a>
          <h2
            class="css-nj5449"
          >
            Component 
            <em>
              design notes
            </em>
          </h2>
        </div>
      </div>
      <ol
        start="1"
      >
        <li>
          Be user-friendly
        </li>
        <li>
          Be a11y accessible
        </li>
        <li>
          <strong>
            Go to 1
          </strong>
        </li>
      </ol>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NotesBlock customItems 1`] = `
<DocumentFragment>
  <div
    class="css-1xkyebe"
  >
    <div
      class="css-jxxswp"
      id=""
    >
      <div
        class="css-xhp9da"
      >
        <h3
          class="css-16ist9v-BlockContainer"
        />
      </div>
    </div>
    <div
      aria-hidden="false"
      class="rah-static rah-static--height-auto"
      style="height: auto; overflow: visible;"
    >
      <div>
        <div>
          <div
            class="css-jxxswp"
            id="introduction"
          >
            <div
              class="css-xhp9da"
            >
              <a
                class="css-6ugsdx-LinkHeading"
                data-id="introduction"
                data-level="1"
                data-title="Introduction"
                href="http://localhost/#introduction"
              >
                <svg
                  aria-hidden="true"
                  class="octicon"
                  fill="currentColor"
                  height="28"
                  role="img"
                  style="display: inline-block; user-select: none; vertical-align: middle;"
                  viewBox="0 0 24 24"
                  width="28"
                >
                  <path
                    d="M14.78 3.653a3.936 3.936 0 115.567 5.567l-3.627 3.627a3.936 3.936 0 01-5.88-.353.75.75 0 00-1.18.928 5.436 5.436 0 008.12.486l3.628-3.628a5.436 5.436 0 10-7.688-7.688l-3 3a.75.75 0 001.06 1.061l3-3z"
                  />
                  <path
                    d="M7.28 11.153a3.936 3.936 0 015.88.353.75.75 0 001.18-.928 5.436 5.436 0 00-8.12-.486L2.592 13.72a5.436 5.436 0 107.688 7.688l3-3a.75.75 0 10-1.06-1.06l-3 3a3.936 3.936 0 01-5.567-5.568l3.627-3.627z"
                  />
                </svg>
              </a>
              <h1
                class="css-ixvu55"
              >
                Introduction
              </h1>
            </div>
          </div>
          <p>
            some 
            <strong>
              markdown
            </strong>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NotesBlock markdownFile 1`] = `
<DocumentFragment>
  <div
    class="css-vurnku"
  >
    <div
      class="css-vurnku"
      id=""
    >
      <div
        class="css-vurnku"
      >
        <h3
          class="css-7w8dq8-BlockContainer"
        />
      </div>
    </div>
    <div
      aria-hidden="false"
      class="rah-static rah-static--height-auto"
      style="height: auto; overflow: visible;"
    >
      <div>
        <p>
          data:text/markdown;base64,IyBCdXR0b24KCiMjIEd1aWRlbGluZXMKCi0gVGhlIGNvbXBvbmVudCBfc2hvdWxkXyB1c2UgY29sb3IgcGFsZXR0ZQotIFRoZSBjb21wb25lbnQgd2lsbCBoYXZlIDMgdmFyaWFudHMKICAxLiAqKnByaW1hcnkqKiAtIGZvciBtYWluLCBtb3N0IGltcG9ydGFudCBhY3Rpb25zIG9uIHNlY3JlZW4KICAyLiAqKnNlY29uZGFyeSoqIC0gZm9yIGxlc3Mtc2lnbmlmaWNhbnQgYWN0aW9ucwogIDMuICoqZGlzYWJsZWQqKiAtIGNhbiBub3QgYmUgY2xpY2tlZCwgdmlzdWFsbHkgc3ViZHVlZAoKIyMgU3R5bGVzCgotIHByaW1hcnkgY29sb3IgI2Q0NWEzM2YKLSBkaXNhYmxlZCBjb2xvciBjb2xvciAjM2UzZTNlCg==
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NotesBlock overview 1`] = `
<DocumentFragment>
  <div
    class="css-1xkyebe"
  >
    <div
      class="css-jxxswp"
      id=""
    >
      <div
        class="css-xhp9da"
      >
        <h3
          class="css-16ist9v-BlockContainer"
        />
      </div>
    </div>
    <div
      aria-hidden="false"
      class="rah-static rah-static--height-auto"
      style="height: auto; overflow: visible;"
    >
      <div>
        <div>
          <div
            class="css-jxxswp"
            id="component-design-notes"
          >
            <div
              class="css-xhp9da"
            >
              <a
                class="css-1aob0xw-LinkHeading"
                data-id="component-design-notes"
                data-level="2"
                data-title="Component ,design notes"
                href="http://localhost/#component-design-notes"
              >
                <svg
                  aria-hidden="true"
                  class="octicon"
                  fill="currentColor"
                  height="26"
                  role="img"
                  style="display: inline-block; user-select: none; vertical-align: middle;"
                  viewBox="0 0 24 24"
                  width="26"
                >
                  <path
                    d="M14.78 3.653a3.936 3.936 0 115.567 5.567l-3.627 3.627a3.936 3.936 0 01-5.88-.353.75.75 0 00-1.18.928 5.436 5.436 0 008.12.486l3.628-3.628a5.436 5.436 0 10-7.688-7.688l-3 3a.75.75 0 001.06 1.061l3-3z"
                  />
                  <path
                    d="M7.28 11.153a3.936 3.936 0 015.88.353.75.75 0 001.18-.928 5.436 5.436 0 00-8.12-.486L2.592 13.72a5.436 5.436 0 107.688 7.688l3-3a.75.75 0 10-1.06-1.06l-3 3a3.936 3.936 0 01-5.567-5.568l3.627-3.627z"
                  />
                </svg>
              </a>
              <h2
                class="css-nj5449"
              >
                Component 
                <em>
                  design notes
                </em>
              </h2>
            </div>
          </div>
          <ol
            start="1"
          >
            <li>
              Be user-friendly
            </li>
            <li>
              Be a11y accessible
            </li>
            <li>
              <strong>
                Go to 1
              </strong>
            </li>
          </ol>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
